[gd_scene load_steps=3 format=2]

[ext_resource path="res://interface/MainMenu.gd" type="Script" id=1]

[sub_resource type="ButtonGroup" id=1]

resource_local_to_scene = true
resource_name = "StartButtons"
_sections_unfolded = [ "Resource" ]

[node name="MainMenu" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1281.0
margin_bottom = 599.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="InitialMenu" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -3.0
margin_top = 2.0
margin_right = 424.0
margin_bottom = 202.0
grow_horizontal = 0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 2

[node name="Name" type="LineEdit" parent="InitialMenu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 126.0
margin_top = 37.0
margin_right = 301.0
margin_bottom = 61.0
rect_min_size = Vector2( 175, 24 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 6
size_flags_vertical = 6
max_length = 20
focus_mode = 2
context_menu_enabled = true
placeholder_text = "Name"
placeholder_alpha = 0.6
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Caret", "Placeholder", "Rect" ]

[node name="MarginContainer" type="CenterContainer" parent="InitialMenu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 102.0
margin_right = 427.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
use_top_left = false
_sections_unfolded = [ "Grow Direction" ]

[node name="HBoxContainer" type="HBoxContainer" parent="InitialMenu/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 95.0
margin_top = 39.0
margin_right = 331.0
margin_bottom = 59.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 3.0
custom_constants/separation = 100
alignment = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Rect", "Size Flags", "custom_constants" ]

[node name="MarginContainer" type="MarginContainer" parent="InitialMenu/MarginContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 68.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 6
size_flags_vertical = 2
_sections_unfolded = [ "Margin" ]

[node name="Host" type="Button" parent="InitialMenu/MarginContainer/HBoxContainer/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 68.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 7
size_flags_vertical = 4
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = SubResource( 1 )
text = "HOST"
flat = false
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="InitialMenu/MarginContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 168.0
margin_right = 236.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 6
size_flags_vertical = 2
_sections_unfolded = [ "Margin", "Rect" ]

[node name="Join" type="Button" parent="InitialMenu/MarginContainer/HBoxContainer/MarginContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 68.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 7
size_flags_vertical = 4
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = SubResource( 1 )
text = "JOIN"
flat = false
align = 1

[node name="HostMenu" type="VBoxContainer" parent="." index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 426.0
margin_bottom = 200.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0

[node name="Back" type="Button" parent="HostMenu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 183.0
margin_top = 39.0
margin_right = 243.0
margin_bottom = 59.0
rect_min_size = Vector2( 60, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 6
size_flags_vertical = 6
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "< BACK"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Host" type="Button" parent="HostMenu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 167.0
margin_top = 141.0
margin_right = 259.0
margin_bottom = 161.0
rect_min_size = Vector2( 60, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 6
size_flags_vertical = 6
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "START GAME"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="ClientMenu" type="VBoxContainer" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 426.0
margin_bottom = 200.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0

[node name="Back" type="Button" parent="ClientMenu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 183.0
margin_top = 22.0
margin_right = 243.0
margin_bottom = 42.0
rect_min_size = Vector2( 60, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 6
size_flags_vertical = 6
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "< BACK"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="IPAddress" type="LineEdit" parent="ClientMenu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 125.0
margin_top = 88.0
margin_right = 300.0
margin_bottom = 112.0
rect_min_size = Vector2( 175, 24 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 6
size_flags_vertical = 6
focus_mode = 2
context_menu_enabled = true
placeholder_text = "IP"
placeholder_alpha = 0.6
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Caret", "Placeholder", "Rect" ]

[node name="Join" type="Button" parent="ClientMenu" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 167.0
margin_top = 158.0
margin_right = 259.0
margin_bottom = 178.0
rect_min_size = Vector2( 60, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 6
size_flags_vertical = 6
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "START GAME"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[connection signal="text_changed" from="InitialMenu/Name" to="." method="_on_Name_text_changed"]

[connection signal="pressed" from="InitialMenu/MarginContainer/HBoxContainer/MarginContainer/Host" to="." method="_on_CreateButton_pressed"]

[connection signal="pressed" from="InitialMenu/MarginContainer/HBoxContainer/MarginContainer2/Join" to="." method="_on_JoinButton_pressed"]

[connection signal="pressed" from="HostMenu/Back" to="." method="_on_Back_pressed"]

[connection signal="pressed" from="HostMenu/Host" to="." method="_create_server"]

[connection signal="pressed" from="ClientMenu/Back" to="." method="_on_Back_pressed"]

[connection signal="text_changed" from="ClientMenu/IPAddress" to="." method="_on_IPAddress_text_changed"]

[connection signal="pressed" from="ClientMenu/Join" to="." method="_join_server"]


